@@ -1,13 +1,12 @@
 package weasel.compiler.keywords;
 
-import java.util.ArrayList;
-import java.util.List;
 import java.util.ListIterator;
 
 import weasel.compiler.WeaselBlockInfo;
 import weasel.compiler.WeaselCompiler;
 import weasel.compiler.WeaselCompilerException;
 import weasel.compiler.WeaselCompilerReturn;
+import weasel.compiler.WeaselInstructionList;
 import weasel.compiler.WeaselKeyWordCompilerHelper;
 import weasel.compiler.WeaselToken;
 import weasel.compiler.WeaselTokenType;
@@ -27,7 +26,7 @@ public class WeaselKeyWordCompilerFor extends WeaselKeyWordCompiler {
 	public WeaselCompilerReturn compile(WeaselToken token, WeaselCompiler compiler, WeaselKeyWordCompilerHelper compilerHelpher, ListIterator<WeaselToken> iterator) throws WeaselCompilerException {
 		expect(iterator.next(), WeaselTokenType.OPENBRACKET);
 		compilerHelpher.openBlock(true);
-		List<WeaselInstruction> instructions = WeaselTree.parseAndCompileWhithVarDec(compiler, compilerHelpher, iterator);
+		WeaselInstructionList instructions = WeaselTree.parseAndCompileWhithVarDec(compiler, compilerHelpher, iterator);
 		WeaselTree tree2 = WeaselTree.parse(iterator, WeaselTokenType.SEMICOLON);
 		if(tree2==null){
 			throw new WeaselCompilerException(token.line, "Expect boolean value in secound part of for");
@@ -37,15 +36,15 @@ public class WeaselKeyWordCompilerFor extends WeaselKeyWordCompiler {
 		WeaselToken t = iterator.next();
 		WeaselCompilerReturn wcr;
 		if(instructions == null){
-			instructions = new ArrayList<WeaselInstruction>();
-			instructions.add(new WeaselInstructionJumperDummy());
+			instructions = new WeaselInstructionList();
+			instructions.add(token.line, new WeaselInstructionJumperDummy());
 		}
-		WeaselInstruction startJump = instructions.get(instructions.size()-1);
+		WeaselInstruction startJump = instructions.getLast();
 		wcr = tree2.compile(compiler, compilerHelpher, null, new WeaselGenericClass(compiler.baseTypes.voidClass), null, false);
 		instructions.addAll(wcr.instructions);
 		WeaselTree.autoCast(compiler, wcr.returnType, new WeaselGenericClass(compiler.baseTypes.booleanClass), token.line, instructions, true);
 		WeaselInstructionIf ifI;
-		instructions.add(ifI = new WeaselInstructionIf());
+		instructions.add(token.line, ifI = new WeaselInstructionIf());
 		if(t.tokenType==WeaselTokenType.OPENBLOCK){
 			t = iterator.next();
 			while(t.tokenType!=WeaselTokenType.CLOSEBLOCK){
@@ -57,27 +56,27 @@ public class WeaselKeyWordCompilerFor extends WeaselKeyWordCompiler {
 			iterator.previous();
 			instructions.addAll(WeaselTree.parseAndCompile(compiler, compilerHelpher, iterator));
 		}
-		WeaselInstruction continueJump = instructions.get(instructions.size()-1);
+		WeaselInstruction continueJump = instructions.getLast();
 		if(tree3!=null){
 			wcr = tree3.compile(compiler, compilerHelpher, null, new WeaselGenericClass(compiler.baseTypes.voidClass), null, false);
 			instructions = wcr.instructions;
 			if(wcr.returnType.getBaseClass()!=compiler.baseTypes.voidClass)
-				instructions.add(new WeaselInstructionPop());
+				instructions.add(t.line, new WeaselInstructionPop());
 		}
 		WeaselInstruction ifJump = new WeaselInstructionJump(startJump);
-		instructions.add(ifJump);
+		instructions.add(token.line, ifJump);
 		ifI.setTarget(ifJump);
 		WeaselBlockInfo wbi = compilerHelpher.closeBlock();
 		int pops = wbi.varsToPop();
 		if(pops==1){
-			instructions.add(new WeaselInstructionPop());
+			instructions.add(t.line, new WeaselInstructionPop());
 		}else if(pops>1){
-			instructions.add(new WeaselInstructionPops(pops));
+			instructions.add(t.line, new WeaselInstructionPops(pops));
 		}
 		if(pops>=1){
-			instructions.add(0, new WeaselInstructionReservate(pops));
+			instructions.add(token.line, new WeaselInstructionReservate(pops));
 		}
-		WeaselInstruction breakJump = instructions.get(instructions.size()-1);
+		WeaselInstruction breakJump = instructions.getLast();
 		for(WeaselInstructionJump breakI:wbi.breaks){
 			breakI.setTarget(breakJump);
 		}
